--- a/src/components/media/ActionHeader/index.module.scss
+++ b/src/components/media/ActionHeader/index.module.scss
@@ -1,11 +1,11 @@
 .featurePlayBtn {
-  background-color: transparent;
-  border: none;
-  &:focus {
-    outline: 0;
-  }
+    background-color: transparent;
+    border: none;
+    &:focus {
+        outline: 0;
+    }
 }
 
-.menuIcon {
-  width: 15px;
+.playlistIcon {
+    width: 15px;
 }
