--- a/src/components/common/Preview/index.module.scss
+++ b/src/components/common/Preview/index.module.scss
@@ -8,6 +8,8 @@
     position: relative;
     width: 300px !important;
     min-width: 300px;
+    min-height: 300px;
+    max-height: 310px;
     float: left;
     margin-right: 1.5rem;
     box-shadow: 3px 3px 3px #111;
