--- a/src/components/common/Hero/index.module.scss
+++ b/src/components/common/Hero/index.module.scss
@@ -1,18 +1,19 @@
 @import '$assets/scss/main.scss';
-
 .heroWrapper {
-  display: flex;
-  flex: 1;
-  height: 280px;
+    width: 100vw;
+    height: 100vh;
+    background-image: url('../../../assets/images/background.png');
+    background-size: cover;
+    background-position: center;
 }
 
 .heroHeading {
-  font-family: Poppins;
-  font-weight: 700;
-  font-size: $heading;
-  color: $primary-gray;
+    font-family: Poppins;
+    font-weight: 700;
+    font-size: $heading;
+    color: $primary-gray;
 }
 
 .heroSubHeading {
-  color: $secondary-gray;
+    color: $secondary-gray;
 }
