--- a/src/components/common/Preview/index.module.scss
+++ b/src/components/common/Preview/index.module.scss
@@ -45,6 +45,10 @@
     float: right;
 }
 
+.bottom_icon:hover {
+    cursor: pointer;
+}
+
 .realFeatureAvater {
     height: 35px !important;
     width: 35px !important;
