--- a/src/components/marketing-site/HowItWorks/index.module.scss
+++ b/src/components/marketing-site/HowItWorks/index.module.scss
@@ -1,15 +1,15 @@
 @import '$assets/scss/main.scss';
-
 .howItWorksFeature {
-  max-width: 420px;
+    max-width: 420px;
 }
 
 .panel {
-  margin: 2rem 0;
-  padding: 3rem 1rem;
+    margin: 2rem 0;
+    padding: 3rem 1rem;
 }
 
 .panelHeader {
-  font-size: 1.6rem;
-  color: $white;
+    font-size: 72px;
+    color: $white;
+    font-family: 'Montserrat';
 }
