--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -1,58 +1,58 @@
 @import '$assets/scss/main.scss';
-
 .appHeaderWrapper {
-  position: absolute;
-  top: 0;
-  height: 70px;
-  padding: 0.5rem 2.5rem;
-  width: calc(100% - 220px);
-  background-color: $primary-green;
-  z-index: 100;
-  box-shadow: 3px 3px 3px #222;
+    position: absolute;
+    top: 0;
+    height: 70px;
+    padding: 0.5rem 2.5rem;
+    width: calc(100% - 220px);
+    background-color: $primary-green;
+    z-index: 10000;
+    box-shadow: 3px 3px 3px #222;
 }
 
 .mobile {
-  width: 100%;
+    width: 100%;
 }
 
 .searchInactive {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 .appHeaderAvatar {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
 }
 
 .appHeaderName {
-  color: $white;
-  padding: 0 1rem;
-  span {
-    padding: 0 0.5rem;
-    width: 14ch;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+    color: $white;
+    padding: 0 1rem;
+    span {
+        padding: 0 0.5rem;
+        width: 14ch;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 .appHeaderInput {
-  background-color: $secondary-black;
-  border-color: $secondary-black;
-  input {
-    color: $white;
-  }
+    background-color: $secondary-black;
+    border-color: $secondary-black;
+    input {
+        color: $white;
+    }
 }
 
 .optSecondary {
-  color: $secondary-green;
-  &:focus, &:active, &:hover {
     color: $secondary-green;
-  }
+    &:focus,
+    &:active,
+    &:hover {
+        color: $secondary-green;
+    }
 }
 
 .menuWrapper {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
-
