--- a/src/components/common/FeatureMark/index.module.scss
+++ b/src/components/common/FeatureMark/index.module.scss
@@ -3,8 +3,6 @@
     display: inline-block;
     position: relative;
     width: 100%;
-    margin-right: 10px;
-    margin-bottom: 10px;
 }
 
 .dummy {
@@ -124,4 +122,10 @@
 
 .hoverCursor:hover {
     cursor: pointer;
+}
+
+.logo_icon {
+    margin-top: 5px;
+    width: 20px;
+    height: 25px;
 }
