--- a/src/components/common/Header/Menu/index.module.scss
+++ b/src/components/common/Header/Menu/index.module.scss
@@ -1,24 +1,23 @@
 @import '$assets/scss/main.scss';
-
 .menuBtn {
-  background: transparent;
-  border: 0;
-  justify-content: center;
-  margin: 0 .8rem;
-  &:focus {
-    outline: none;
-  }
+    background: transparent;
+    border: 0;
+    justify-content: center;
+    margin: 0 1.3rem;
+    &:focus {
+        outline: none;
+    }
 }
 
 .menuText {
-  font-family: Poppins;
-  color: $secondary-green;
-  font-size: $normal-text;
+    font-family: Poppins;
+    color: #FC0135;
+    font-size: 25px;
 }
 
 .activeDot {
-  border-radius: 5px;
-  height: 5px;
-  width: 5px;
-  background-color: $secondary-green;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: #FC0135;
 }
