--- a/src/components/common/Header/index.module.scss
+++ b/src/components/common/Header/index.module.scss
@@ -1,33 +1,34 @@
 @import '$assets/scss/main.scss';
-
 .wrapper {
-  padding: 2.8rem 0;
+    padding: 2.8rem 3rem 2.8rem 0;
+    position: absolute;
+    right: 0;
 }
+
 .title {
-  font-family: Montserrat;
-  font-weight: bold;
-  font-size: $title;
-  color: $secondary-green;
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: $title;
+    color: $secondary-green;
 }
+
 .panel {
-  flex: 1;
+    flex: 1;
 }
 
 .menuMobile {
-  position: absolute;
-  top: 70px;
-  left: 0;
-  height: 0;
-  width: 100%;
-  z-index: $z-index-lifter;
-  background-color: $white;
-  overflow: hidden;
-  transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
-              height 0.5s ease;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    height: 0;
+    width: 100%;
+    z-index: $z-index-lifter;
+    background-color: $white;
+    overflow: hidden;
+    transition: transform 0.3s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.3s cubic-bezier(0.77, 0.2, 0.05, 1.0), height 0.5s ease;
 }
 
 .menuActive {
-  height: 200px;
-  padding: 1rem 2rem;
+    height: 200px;
+    padding: 1rem 2rem;
 }
