Replaced color Accent Green with New Mkondo Logo Pink

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -5,7 +5,7 @@ $normal-text: 14px;
 $margin-top: 2.5rem;
 // COLORS
 $primary-green: #1A394B;
-$secondary-green: #66CCCC;
+$secondary-green: #FC0135;
 $primary-gray: #C1C1C1;
 $primary-blue: #3B8CBC;
 $secondary-gray: #8C8C8C;
