--- a/src/components/common/LangBar/index.module.scss
+++ b/src/components/common/LangBar/index.module.scss
@@ -3,9 +3,9 @@
     color: #aaa;
     padding: 5px 3px 5px 3px;
     border-radius: 8px 0 0 8px;
-    border: 1px solid #000;
-    box-shadow: 2px 2px 3px #111;
-    opacity: 0.8;
+    border: none;
+    box-shadow: 1px 1px 2px #111;
+    opacity: 0.3;
 }
 
 .wrapper:hover {
