--- a/src/components/common/Player/index.module.scss
+++ b/src/components/common/Player/index.module.scss
@@ -1,82 +1,81 @@
 @import '$assets/scss/main.scss';
-
 .playerWrapper {
-  height: 60px;
-  // background-color: $primary-blue;
-  background-image: linear-gradient(#252, #373, #373, #252);
-  padding: 5px 2rem;
-  position: relative;
+    height: 60px;
+    // background-color: $primary-blue;
+    background-color: #3c1361;
+    padding: 5px 2rem;
+    position: relative;
 }
 
 .playerNameWrapper {
-  color: $white;
+    color: $white;
 }
 
 .playerAvatar {
-  height: 40px;
-  width: 40px;
-  border-radius: 20px;
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
 }
 
 .playerBtn {
-  width: 30px;
-  background-color: transparent;
-  border: none;
-  &:focus {
-    outline: none;
-  }
+    width: 30px;
+    background-color: transparent;
+    border: none;
+    &:focus {
+        outline: none;
+    }
 }
 
 .playerVolumeBtn {
-  height: 100%;
-  position: relative;
-  top: -5px;
-  img {
-    height: 15px;
-  }
+    height: 100%;
+    position: relative;
+    top: -5px;
+    img {
+        height: 15px;
+    }
 }
 
 .playerSliderWrapper {
-  flex-grow: 1;
-  height: 100%;
-  padding-top: 10px;
+    flex-grow: 1;
+    height: 100%;
+    padding-top: 10px;
 }
 
 .playerVolumeWrapper {
-  width: 100px;
-  height: 100%;
+    width: 100px;
+    height: 100%;
 }
 
 .pauseBtnWrapper {
-  display: flex;
-  height: 20px;
-  width: 20px;
-  justify-content: center;
-  align-items: center;
-  background: $white;
-  border-radius: 10px;
+    display: flex;
+    height: 20px;
+    width: 20px;
+    justify-content: center;
+    align-items: center;
+    background: $white;
+    border-radius: 10px;
 }
 
 .playerTime {
-  padding: 5px 10px;
-  color: $white;
+    padding: 5px 10px;
+    color: $white;
 }
 
 .size17 {
-  width: 17px;
+    width: 17px;
 }
 
 .playList {
-  position: absolute;
-  display: block;
-  bottom: 65px;
-  right: 5px;
-  visibility: visible;
-  opacity: 1;
-  transition: all 0.3s;
+    position: absolute;
+    display: block;
+    bottom: 65px;
+    right: 5px;
+    visibility: visible;
+    opacity: 1;
+    transition: all 0.3s;
 }
 
 .playListHidden {
-  visibility: hidden;
-  opacity: 0;
+    visibility: hidden;
+    opacity: 0;
 }
