Restled the player to apply some backgrounds

--- a/src/components/common/SideMenu/index.module.scss
+++ b/src/components/common/SideMenu/index.module.scss
@@ -70,7 +70,7 @@
 
 .sideMenuItemTitle {
     color: white;
-    background-color: #8103FC;
+    background-color: $primary-color;
     border-radius: 7px;
 }
 
