--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -6,6 +6,7 @@ $margin-top: 2.5rem;
 // COLORS
 $primary-green: #1A394B;
 $secondary-green: #FC0135;
+$primary-color: #8103FC;
 $accent-color: #FC0135;
 $primary-gray: #C1C1C1;
 $primary-blue: #3B8CBC;
