Implemented Reply of a comment

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -3,6 +3,7 @@ $heading: 24px;
 $title: 18px;
 $normal-text: 14px;
 $margin-top: 2.5rem;
+
 // COLORS
 $primary-green: #1A394B;
 $secondary-green: #FC0135;
@@ -27,8 +28,15 @@ $tertiary-black: #34353D;
 $pink: #EA4C89;
 $primary-light-gray: #F7F5F5;
 $secondary-light-gray: #F1F1F1;
+
 // Z-INDEX
 $z-index-lift: 9;
 $z-index-next: 99;
 $z-index-lifter: 999;
 $z-index-last: 9999;
+
+//Mixins
+@mixin card-dark {
+    padding: 1em;
+    background: rgba(0, 0, 0, 0.5);
+}
