--- a/src/components/common/Player/index.module.scss
+++ b/src/components/common/Player/index.module.scss
@@ -2,7 +2,7 @@
 .playerWrapper {
     height: 60px;
     // background-color: $primary-blue;
-    background-color: #3c1361;
+    background-color: $primary-color;
     padding: 5px 2rem;
     position: relative;
 }
