--- a/src/components/common/Tabs/Menu/index.module.scss
+++ b/src/components/common/Tabs/Menu/index.module.scss
@@ -19,7 +19,7 @@
 }
 
 .activeTabMenu {
-    background-color: $secondary-green;
+    background-color: $primary-color;
     height: 5px;
     border-radius: 5px;
 }
