--- a/src/components/common/TextArea/index.module.scss
+++ b/src/components/common/TextArea/index.module.scss
@@ -6,7 +6,8 @@
     height: 120px;
     overflow: hidden;
     margin: 8px 0;
-    border: 1px solid $border-gray;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
 }
 
 .formTextArea {
@@ -21,7 +22,7 @@
 }
 
 .textareaGrey {
-    background-color: #818181;
+    background-color: rgba(0,0,0,0.3);
     color: white;
 }
 
