--- a/src/components/media/VideoPlayer/index.module.scss
+++ b/src/components/media/VideoPlayer/index.module.scss
@@ -16,13 +16,13 @@
 
 .playerBar {
   height: 60px;
-  background-color: $primary-blue;
+  background-color: $primary-color;
   padding-top: 10px;
 }
 
 .videoCover {
   position: absolute;
-  background-color: $secondary-green;
+  background-color: $accent-color;
   height: 100%;
   width: 100%;
   top: 0;
