--- a/src/components/common/Tabs/index.module.scss
+++ b/src/components/common/Tabs/index.module.scss
@@ -1,5 +1,5 @@
 @import '$assets/scss/main.scss';
 .tabLine {
-    border-bottom: 1px solid $secondary-green;
+    border-bottom: 1px solid $accent-color;
     margin-top: -2.5px;
 }
