--- a/src/components/modals/Login/index.scss
+++ b/src/components/modals/Login/index.scss
@@ -1,10 +1,10 @@
 .login-modal-top {
-    padding-top: 4rem;
+    padding-top: 0;
 }
 
 .foreContent {
     z-index: 2;
-    padding-top: 50px;
+    padding-top: 0;
 }
 
 .f25 {
