--- a/src/assets/scss/abstract/_buttons.scss
+++ b/src/assets/scss/abstract/_buttons.scss
@@ -1,3 +1,19 @@
-.button {
-    padding: 8px 24px;
+.btn-primary {
+    background: rgba($primary-color, 0.9);
+    border-color: rgba($primary-color, 0.9);
+}
+
+.btn-primary:hover {
+    background: $primary-color;
+    border-color: $primary-color;
+}
+
+.btn-outline-primary {
+    color: $primary-color;
+    border-color: rgba($primary-color, 0.9);
+}
+
+.btn-outline-primary:hover {
+     background: $primary-color;
+    border-color: rgba($primary-color, 1);
 }
