--- a/src/components/modals/SignUp/index.scss
+++ b/src/components/modals/SignUp/index.scss
@@ -1,3 +1,5 @@
+@import '$assets/scss/main.scss';
+
 .login-modal-top {
     padding-top: 4rem;
 }
@@ -81,9 +83,9 @@
 }
 
 .group-item {
-    width: 20%;
+    width: 100%;
     min-width: 80px;
-    height: 80px;
+    height: 150px;
     background-color: #EAEAEA;
     box-shadow: 1px 1px 2px grey;
     margin-right: 5px;
@@ -93,10 +95,14 @@
     justify-content: center;
     align-items: center;
     border: none;
+
+    @media screen and (max-width: 576px) {
+        height: 100px
+    }
 }
 
 .item-active {
-    background-color: #8103FC;
+    background-color: $primary-color;
     color: white;
 }
 
