--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -12,7 +12,6 @@
     padding: 10px 10px 5px 10px;
     position: relative;
     border-radius: 5px;
-    margin: auto;
 }
 
 // .f_featureWrapper:before {
@@ -54,8 +53,8 @@
         outline: 0;
     }
     position: absolute;
-    right: 20px;
-    top: 50%;
+    right: 0;
+    bottom: 5px;
 }
 
 .f_featureHeaderWrapper {
