Added a comment like feature

--- a/src/components/media/CommentRow/index.module.scss
+++ b/src/components/media/CommentRow/index.module.scss
@@ -31,6 +31,10 @@
     color: $accent-color;
 }
 
+.replyButton.active {
+    color: $accent-color;
+}
+
 .textArea {
     @include card-dark;
     width: 100%;
