--- a/src/components/common/Scroller/index.module.scss
+++ b/src/components/common/Scroller/index.module.scss
@@ -2,7 +2,7 @@
 .container {
     display: flex;
     position: relative;
-    height: 300px;
+    align-items: stretch;
     width: 100%;
     box-sizing: border-box;
 }
@@ -15,8 +15,6 @@
 .wrapper {
     position: relative;
     width: 100%;
-    height: 355px;
-    overflow-x: auto;
 }
 
 //////////////////////// Add ///////////////////////////
