--- a/src/components/media/VideoPlayer/index.module.scss
+++ b/src/components/media/VideoPlayer/index.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */;
   height: 80%;
+  z-index: 10001;
 }
 
 .reactPlayer {
