Implementing UI/UX for social media -> Created the main layout that consists of an header, sidemenu and content area. The Header has a Primary and Secondary Nav bar -> Implementing social media feed page with some reusable components i will use -> Created a CreatePost Component -> Created a StoryList Component -> Created a Date Component

--- a/src/components/common/SideMenu/index.module.scss
+++ b/src/components/common/SideMenu/index.module.scss
@@ -102,3 +102,19 @@
 .sidemenu_logo {
     width: 100px;
 }
+
+.socialButton {
+    margin-left: 10px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+    cursor: pointer;
+    background: -webkit-linear-gradient(45deg, $primary-color, $accent-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+
+    span {
+        font-weight: 400;
+        -webkit-text-fill-color:grey;
+    }
+}
