--- a/src/containers/Media/ViewMedia/index.module.scss
+++ b/src/containers/Media/ViewMedia/index.module.scss
@@ -14,3 +14,42 @@
 .descriptionWrapper {
   padding: 2rem 0 1rem;
 }
+
+.description {
+  border-bottom: solid 1px grey;
+}
+
+.likeWrapper {
+  cursor: pointer;
+  span {
+    font-size: 1.2em;
+    font-weight: 900;
+  }
+
+  @media (max-width: 992px) {
+    flex-direction: column;
+    align-items: center;
+    span {
+      font-size: 0.8em;
+      font-weight: 500;
+    }
+  }
+}
+
+.stickyPlayer {
+  @media (max-width: 992px) {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
+}
+
+.commentsToggle {
+  border-bottom: solid 1px grey;
+  p {
+    margin: 0;
+    margin-bottom: 5px;
+  }
+}
