--- a/src/components/social/header/index.module.scss
+++ b/src/components/social/header/index.module.scss
@@ -77,7 +77,9 @@
         content: '';
         position: absolute;
         width: 96%;
-        border-bottom: solid 2px rgba(#ffffff, 0.5);
+        height: 2px;
+        background: rgb(0,212,255);
+        background: linear-gradient(90deg, $accent-color 0%, $primary-color 46%, $accent-color 100%);
         bottom: 0;
         left: 2%;
         z-index: 1;
