--- a/src/components/common/TextArea/index.module.scss
+++ b/src/components/common/TextArea/index.module.scss
@@ -7,7 +7,16 @@
     overflow: hidden;
     margin: 8px 0;
     border-radius: 5px;
+    border: solid 1px #F0F0F0;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
+}
+
+.isInvalid {
+    border-color: red;
+}
+
+p.invalidFeedback {
+    color: red;
 }
 
 .formTextArea {
