--- a/src/components/common/TextInput/index.module.scss
+++ b/src/components/common/TextInput/index.module.scss
@@ -9,6 +9,14 @@
     overflow: hidden;
 }
 
+.isInvalid {
+    border-color: red;
+}
+
+p.invalidFeedback {
+    color: red;
+}
+
 .textInputIcon {
     padding: 0 1rem;
     height: 20px;
@@ -48,4 +56,8 @@
     &:focus {
         outline: none;
     }
+}
+
+.invalidFeedback {
+
 }
