--- a/src/components/forms/Date/index.scss
+++ b/src/components/forms/Date/index.scss
@@ -7,3 +7,11 @@
     color: white;
     border: 1px solid white;
 }
+
+.isInvalid {
+    border-color: red;
+}
+
+p.invalidFeedback {
+    color: red;
+}
