--- a/src/containers/Media/ManageSeriesProfile/index.module.scss
+++ b/src/containers/Media/ManageSeriesProfile/index.module.scss
@@ -85,6 +85,21 @@
             }
         }
     }
+
+    .body {
+        height: 0;
+        overflow-y: scroll;
+        transition: all 0.3s ease-in;
+    }
+
+    .body.active {
+        height: 330px;
+        transition: all 0.3s ease-out;
+
+        @media (max-width: 992px) { 
+            height: 400px;
+        }
+    }
 }
 
 .tileCard.uploadComplete {
