--- a/src/components/social/post/item/footer/index.module.scss
+++ b/src/components/social/post/item/footer/index.module.scss
@@ -1,8 +1,12 @@
 .wrapper {
-    display: flex;
     color: white;
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 
     img {
         display: inline-block;
     }
+}
+
+.iconButton {
+    cursor: pointer;
 }
