Updated the Alert component to make it look more attractive

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -5,10 +5,14 @@ $normal-text: 14px;
 $margin-top: 2.5rem;
 
 // COLORS
-$primary-green: #1A394B;
-$secondary-green: #FC0135;
 $primary-color: #8103FC;
 $accent-color: #FC0135;
+$success-color: #00C851;
+$error-color: #ff4444;
+
+$primary-green: #1A394B;
+$secondary-green: #FC0135;
+
 $primary-gray: #C1C1C1;
 $primary-blue: #3B8CBC;
 $secondary-gray: #8C8C8C;
