--- a/src/components/authentication/Alert/index.scss
+++ b/src/components/authentication/Alert/index.scss
@@ -1,13 +1,13 @@
 @import '$assets/scss/main.scss';
 .auth-alert {
-    height: 40px;
     width: 100%;
     top: 0;
     color: $white;
+    padding: 20px 20px;
     &.auth-alert-success {
-        background-color: $secondary-green;
+        background-color: $success-color;
     }
     &.auth-alert-danger {
-        background-color: $primary-red;
+        background-color: $error-color;
     }
 }
