Worked on register with facebook and updated the way the button looks

--- a/src/components/modals/FacebookLoginComponent/index.module.scss
+++ b/src/components/modals/FacebookLoginComponent/index.module.scss
@@ -1,21 +1,14 @@
 @import '$assets/scss/main.scss';
-.mkBtn {
-    height: 40px;
-    border-radius: 42px;
-    min-width: 140px;
-    border: 0;
-    background-color: $tertiary-blue;
-    color: $white;
-    justify-content: left;
-    align-items: center;
-    display: flex;
-    padding: 0rem 1rem;
-    &:focus {
-        outline: none;
-    }
-    margin-top: 7px;
-}
 
-.mkBtnStretch {
+.facebookButton {
+    all: unset;
+    background: #3b5998;
     width: 100%;
+    color: white;
+    border-radius: 9999px;
+
+    img {
+        height: 39px;
+        margin-right: 10px;
+    }
 }
