Did a couple of updates to allow facebook registration

--- a/src/components/modals/SignUp/FacebookSignUpButton/index.module.scss
+++ b/src/components/modals/SignUp/FacebookSignUpButton/index.module.scss
@@ -11,4 +11,8 @@
         height: 39px;
         margin-right: 10px;
     }
+
+    &::disabled {
+        background: rgba(#3b5998, 0.75);
+    }
 }
