--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -7,15 +7,32 @@
     // margin-left: 1rem;
     // margin-bottom: 1rem;
     background-color: #191919;
-    box-shadow: 3px 3px 3px #111;
-    width: 200px;
-    padding: 10px 10px 5px 10px;
+    // box-shadow: 3px 3px 3px #111;
+    width: 175px;
     position: relative;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    height: 100%;
+    height: 100px;
+}
+
+.f_featureWrapperVideo {
+    // min-height: 185px;
+    // min-width: 300px;
+    // max-width: 450px;
+    // height: 100%;
+    // margin-left: 1rem;
+    // margin-bottom: 1rem;
+    background-color: #191919;
+    // box-shadow: 3px 3px 3px #111;
+    width: 320px;
+    position: relative;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    height: 180px;
 }
 
 // .f_featureWrapper:before {
@@ -39,12 +56,12 @@
 
 .f_featureSummary {
     color: $white;
-    margin: 5px;
 }
 
 .f_featurePane {
     // position: absolute;
     z-index: $z-index-lift;
+    padding: 10px;
 }
 
 .f_featurePlayBtn {
@@ -64,7 +81,7 @@
     top: 0px;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
 }
 
 .f_featureHeaderWrapperTitle {
@@ -98,7 +115,7 @@
 }
 
 .f_bottom_icon {
-    height: 15px;
+    height: 12px;
     color: white;
     margin-left: 10px;
     float: right;
@@ -143,4 +160,33 @@
 
 .views {
     font-size: 8px;
+}
+
+.viewallcomments {
+    cursor: pointer;
+}
+
+.likeandcomment {    
+    display: flex;
+
+    position: absolute;
+    width: auto;
+    bottom: 0px;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+    border-radius: 10px 10px 0 0;
+
+    padding: 5px 5px;
+    align-items: baseline;
+    border-radius: 0 0 10px 10px;
+}
+
+.no_of_likes {
+    margin-left: auto;
+    font-size: 8px;
+}
+
+.title {
+    font-size: 12px;
+    margin-left: 2px;
 }
