--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,3 +12,11 @@
         margin-bottom: 20px;
     }
 }
+
+.logo {
+    background: -webkit-linear-gradient(45deg, $primary-color, $accent-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1.5em;
+    font-weight: 700;
+}
