Modified the login and registration page too

--- a/src/containers/Login/index.module.scss
+++ b/src/containers/Login/index.module.scss
@@ -1,5 +1,10 @@
 @import '$assets/scss/main.scss';
 
+.background {
+    background-color: black;
+    height: 100vh;
+}
+
 .login-modal-top {
     padding-top: 0;
 }
