--- a/src/components/common/TextInput/index.module.scss
+++ b/src/components/common/TextInput/index.module.scss
@@ -3,15 +3,15 @@
 .textInputContainer {
     width: 100%;
     height: 40px;
-    // border-radius: 20px;
+    border-radius: 10px;
     background-color: #F4F4F4;
-    border: 1px solid #F0F0F0;
+    border: 1px solid rgba(0,0,0,0);
     margin: 8px 0;
     overflow: hidden;
 }
 
 .isInvalid {
-    border-color: red;
+    border-color: rgba(255,0,0,0);
 }
 
 p.invalidFeedback {
@@ -47,10 +47,9 @@ p.invalidFeedback {
 
 
 .textInputWrapper {
-    padding: 1px 20px;
+    padding: 10px 15px;
     width: 100%;
     border: none;
-    background-color: #F4F4F4;
     -webkit-box-shadow: 0 0 0px 1000px #F4F4F4 inset;
     &:focus {
         outline: none;
@@ -63,6 +62,7 @@ p.invalidFeedback {
 
     &.GreyStyle::placeholder {
         color: white;
+        font-size: 10px;
         opacity: 0.75;
     }
 }
