--- a/src/containers/Subscription/list/index.module.scss
+++ b/src/containers/Subscription/list/index.module.scss
@@ -56,6 +56,14 @@
         border-radius: 0 0 9999px 9999px;
         padding: 10px;
         text-align: center;
+
+        h3 {
+            font-size: 12px;
+
+            span {
+                font-size: 10px;
+            }
+        }  
     }
 
     button {
@@ -71,4 +79,5 @@
 .title {
     font-family: Montserrat;
     font-weight: 700;
+    color: rgba(255, 255, 255, 0.5);
 }
