worked with adding a payment method

--- a/src/containers/Payment/CreatePaymentMethod/index.module.scss
+++ b/src/containers/Payment/CreatePaymentMethod/index.module.scss
@@ -11,3 +11,10 @@
         color: rgba(255, 255, 255, 0.5);
     }
 }
+
+.stripeFormWrapper {
+    width: 50vw;
+    @media only screen and (min-width: 992px) {
+        
+    }
+}
