--- a/src/containers/Configuration/Menu/index.module.scss
+++ b/src/containers/Configuration/Menu/index.module.scss
@@ -3,6 +3,7 @@
 .tile {
     background: rgba($color: $black, $alpha: 0.5);
     padding: 20px;
+    margin-bottom: 10px;
     cursor: pointer;
 
     h2 {
