--- a/src/containers/Payment/PaymentMethods/index.module.scss
+++ b/src/containers/Payment/PaymentMethods/index.module.scss
@@ -27,3 +27,17 @@
         }
     }
 }
+
+.cards {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 10px;
+}
+
+.card {
+    background-color: black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba($color: #000000, $alpha: 0.9);
+    padding: 20px;
+    color: #fdfdfd;
+}
