--- a/src/containers/Media/Theatre/index.module.scss
+++ b/src/containers/Media/Theatre/index.module.scss
@@ -3,6 +3,7 @@
 .container {
     margin-top: 4rem;
     padding: 0 40px;
+    color: rgba($color: #fff, $alpha: 0.81);
 }
 
 .heading1 {
@@ -18,7 +19,6 @@
 
 .theatre {
     position: relative;
-    margin-top: 50px;
     width: 100%;
     height: 600px;
     background-position: center;
@@ -82,5 +82,33 @@
                 color: white;
             }
         }
+    }
+}
+
+.theatreWrapper {
+    margin-top: 60px;
+}
+
+.error {
+    background-color: red;
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+
+    p {
+        all: unset;
+    }
+}
+
+.success {
+    background-color: green;
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+
+    p {
+        all: unset;
     }
 }
