--- a/src/containers/Media/Theatre/widgets/playlist/cover/index.module.scss
+++ b/src/containers/Media/Theatre/widgets/playlist/cover/index.module.scss
@@ -2,8 +2,8 @@
 
 .wrapper {
     position: relative;
-    height: 180px;
-    width: 100%;
+    height: 240px;
+    width: 162px;
     background-color: black;
     background-position: center;
     background-size: cover;
