--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -1,10 +1,11 @@
 @import '$assets/scss/main.scss';
+
 .appHeaderWrapper {
-    position: absolute;
+    position: sticky;
     top: 0;
     height: 70px;
     padding: 0.5rem 2.5rem;
-    width: calc(100%);
+    width: 100%;
     background-color: #323232;
     z-index: 10000;
     @media screen and (max-width: 576px) {
