--- a/src/containers/Main/index.module.scss
+++ b/src/containers/Main/index.module.scss
@@ -1,10 +1,8 @@
 @import '$assets/scss/main.scss';
 @import '$assets/scss/general.scss';
 .content {
-    width: 100%;
-    height: 100%;
+    flex: 1;
     background-color: #323232;
-    padding-top: 1rem;
     overflow-x: hidden;
 }
 
