--- a/src/components/common/TabsMark/Menu/index.module.scss
+++ b/src/components/common/TabsMark/Menu/index.module.scss
@@ -2,24 +2,31 @@
 .tabMenu {
     color: $black;
     font-family: Roboto;
-    font-size: 20px;
+    font-size: 12px;
     border: none;
     background-color: transparent;
     padding: 0.5rem 1rem;
     margin-top: 1rem;
+    margin-right: 3rem;
     &:focus {
         outline: none;
     }
     text-transform: uppercase;
-    border-radius: 2rem;
+
     @media screen and (max-width: 768px) {
-        font-size: 14px;
+        font-size: 9px;
         padding: 0.5rem 1rem;
     }
 }
 
 .tabMenuActive {
-    background-color: #C082FD;
+    font-size: 20px;
+    border-bottom: solid 5px $accent-color;
+
+    @media screen and (max-width: 768px) {
+        font-size: 14px;
+        padding: 0.5rem 1rem;
+    }
 }
 
 .activeTabMenu {
