--- a/src/containers/Media/Theatre/widgets/playlist/item/header/index.module.scss
+++ b/src/containers/Media/Theatre/widgets/playlist/item/header/index.module.scss
@@ -2,11 +2,19 @@
 
 .wrapper {
     position: relative;
-    margin: 10px 20px;
+    margin: 5px;
     display: flex;
     justify-content: end;
 
     img {
         margin-left: 10px;
+    }
+
+    span {
+        background-color: rgba($color: #000000, $alpha: 0.7);
+        padding: 5px 10px;
+        font-size: 8px;
+        color: white;
+        border-radius: 5px;
     }
 }
