implementing management panel

--- a/src/components/common/GenreSelector/index.module.scss
+++ b/src/components/common/GenreSelector/index.module.scss
@@ -30,6 +30,10 @@
     color: $secondary-gray;
 }
 
+.genreSelectorMenu:hover {
+    cursor: pointer;
+}
+
 .genreSelectorMenuActive {
     background-color: #FC0136;
     color: $white;
