--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -61,6 +61,7 @@
     }
     background: -webkit-linear-gradient(45deg, $primary-color, $accent-color);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 1.5em;
     font-weight: 700;
