fixed some issues with comments

--- a/src/components/media/CommentRow/index.module.scss
+++ b/src/components/media/CommentRow/index.module.scss
@@ -12,6 +12,7 @@
 .row {
     @include card-dark;
     margin: 1rem 0;
+    color: white;
 }
 
 .deleteStyle {
@@ -23,8 +24,8 @@
     cursor: pointer;
 }
 
-.replyButton {
-}
+// .replyButton {
+// }
 
 .replyButton:hover {
     cursor: pointer;
