--- a/src/containers/Media/NewVideo/index.module.scss
+++ b/src/containers/Media/NewVideo/index.module.scss
@@ -34,6 +34,14 @@
   margin-top: 1.5rem;
 }
 
+.movieAspectRatio {
+  aspect-ratio: 27/40;
+}
+
+.videoAspectRatio {
+  aspect-ratio: 27/40;
+}
+
 .spinnerLg {
   width: 2rem;
   height: 2rem;
