--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -8,13 +8,13 @@
     // margin-bottom: 1rem;
     background-color: #191919;
     // box-shadow: 3px 3px 3px #111;
-    width: 175px;
     position: relative;
-    border-radius: 10px;
+    // border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    height: 100px;
+    aspect-ratio: 1/1;
+    height: 200px;
 }
 
 .f_featureWrapperVideo {
@@ -26,13 +26,36 @@
     // margin-bottom: 1rem;
     background-color: #191919;
     // box-shadow: 3px 3px 3px #111;
-    width: 320px;
+    aspect-ratio: 16/9;
     position: relative;
-    border-radius: 10px;
+    // border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-self: stretch;
     height: 180px;
+
+    @media only screen and (max-width: 768px) {
+        height: 150px;
+    }
+}
+
+.f_featureWrapperMovie {
+    // min-height: 185px;
+    // min-width: 300px;
+    // max-width: 450px;
+    // height: 100%;
+    // margin-left: 1rem;
+    // margin-bottom: 1rem;
+    background-color: #191919;
+    // box-shadow: 3px 3px 3px #111;
+    aspect-ratio: 27/40;
+    position: relative;
+    // border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    height: 250px;
+
 }
 
 // .f_featureWrapper:before {
@@ -81,7 +104,7 @@
     top: 0px;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-    border-radius: 10px;
+    // border-radius: 10px;
 }
 
 .f_featureHeaderWrapperTitle {
@@ -174,11 +197,11 @@
     bottom: 0px;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
-    border-radius: 10px 10px 0 0;
+    // border-radius: 10px 10px 0 0;
 
     padding: 5px 5px;
     align-items: baseline;
-    border-radius: 0 0 10px 10px;
+    // border-radius: 0 0 10px 10px;
 }
 
 .no_of_likes {
