--- a/src/containers/Media/Theatre/index.module.scss
+++ b/src/containers/Media/Theatre/index.module.scss
@@ -1,11 +1,17 @@
 @import '$assets/scss/main.scss';
 
 .container {
+    position: relative;
     margin-top: 4rem;
     padding: 0 40px;
     color: rgba($color: #fff, $alpha: 0.81);
+    z-index: 20;
 }
 
+.floatAbove {
+    margin-top: -12rem !important;
+    z-index: 20;
+}
 .heading1 {
     font-family: Montserrat;
     font-weight: 700;
@@ -18,7 +24,7 @@
 }
 
 .theatre {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 600px;
     background-position: center;
@@ -85,8 +91,16 @@
     }
 }
 
+.trailerBg {
+    height: 600px;
+    width: 100%;
+}
+
 .theatreWrapper {
     margin-top: 60px;
+    position: relative;
+    height: 600px;
+    z-index: 0;
 }
 
 .error {
@@ -111,4 +125,25 @@
     p {
         all: unset;
     }
+}
+
+.backgroundTrailer {
+    position: absolute;
+    z-index: 0;
+    background-color: black;
+}
+
+.fadingBackground {
+    position: absolute;
+    background-image: linear-gradient(to bottom,rgba(20,20,20,0) 0,rgba(20,20,20,.15) 15%,rgba(20,20,20,.35) 29%,rgba(20,20,20,.58) 44%,#323232 68%,#323232 100%);
+    background-size: 100% 100%;
+    background-position: 0 top;
+    background-repeat: repeat-x;
+    background-color: transparent;
+    width: 100%;
+    height: 14.7vw;
+    top: auto;
+    bottom: -1px;
+    opacity: 1;
+    z-index: 1;
 }
