--- a/src/containers/Media/Theatre/widgets/playlist/item/index.module.scss
+++ b/src/containers/Media/Theatre/widgets/playlist/item/index.module.scss
@@ -1,10 +1,12 @@
 @import '$assets/scss/main.scss';
 
 .wrapper {
-    display: relative;
+    position: relative;
+    display: inline-block;
     margin-right: 10px;
     transition: all 0.3s ease-out;
     overflow: hidden;
+    min-width: 162px;
 }
 
 .wrapper:hover {
