--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -6,10 +6,11 @@
     height: 70px;
     padding: 0.5rem 2.5rem;
     width: 100%;
-    background-color: #323232;
+    background-color: rgba($color: #000000, $alpha: 0.50);
     z-index: 10000;
     @media screen and (max-width: 576px) {
         background-color: black;
+        padding: 0.5rem 1rem;
     }
 }
 
@@ -59,6 +60,19 @@
     @media screen and (min-width: 576px) {
         display: none;
     }
+    background: -webkit-linear-gradient(45deg, $primary-color, $accent-color);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+.mobile_logo_plus {
+    @media screen and (min-width: 576px) {
+        display: block;
+    }
+    display: none;
     background: -webkit-linear-gradient(45deg, $primary-color, $accent-color);
     background-clip: text;
     -webkit-background-clip: text;
