--- a/src/components/common/Selector/index.module.scss
+++ b/src/components/common/Selector/index.module.scss
@@ -19,6 +19,7 @@
     border-bottom: 8px solid $black;
     padding-top: 4rem;
     padding-bottom: 2rem;
+    overflow-x: scroll;
 }
 
 .genreSelectorMenu {
