implemented audio dashboard

--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -31,11 +31,12 @@
 .appHeaderName {
     color: $white;
     padding: 0 1rem;
-    margin-top: 13px;
+    // margin-top: 13px;
     background-color: black;
     padding: 2px;
     border-radius: 21px;
     margin-left: 10px;
+
     span {
         padding: 0 0.5rem;
         width: 14ch;
