did something for vidoes

--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -183,6 +183,7 @@
 
 .views {
     font-size: 8px;
+    color: white;
 }
 
 .viewallcomments {
@@ -207,6 +208,7 @@
 .no_of_likes {
     margin-left: auto;
     font-size: 8px;
+    color: white;
 }
 
 .title {
