--- a/src/containers/Home/index.module.scss
+++ b/src/containers/Home/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 .homeContent {
-    padding: 0 2.5rem 5rem;
+    // padding: 0 2.5rem 5rem;
     color: $white !important;
 }
 
