--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -58,6 +58,20 @@
 
 }
 
+.content {
+    opacity: 0;
+    transition: all 0.3s ease-in;
+
+    @media only screen and (max-width: 676px) {
+        opacity: 1;
+    }
+}
+
+.content.active {
+    opacity: 1;
+    transition: all 0.3s ease-out;
+}
+
 // .f_featureWrapper:before {
 //     content: " ";
 //     position: absolute;
