added an artist name

--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -149,6 +149,10 @@
     white-space: nowrap;
     overflow: hidden;
     color: #aaa;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .f_bottom_icon {
