--- a/src/components/common/NewItem/index.module.scss
+++ b/src/components/common/NewItem/index.module.scss
@@ -2,6 +2,15 @@
     height: 200px;
     margin-right: 0.5rem;
     margin-bottom: 1rem;
+    position: relative;
+}
+
+.avatarUploadProgress {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    bottom: 10px;
+    left: 10px;
 }
 
 // .itemWrapper {
