--- a/src/containers/Media/Theatre/index.module.scss
+++ b/src/containers/Media/Theatre/index.module.scss
@@ -71,6 +71,7 @@
         top: 200px;
         padding-right: 50px;
         font-family: Montserrat;
+        z-index: 1;
         
         @media only screen and (min-width: 600px) {
             width: 400px;
