--- a/src/containers/Media/Theatre/index.module.scss
+++ b/src/containers/Media/Theatre/index.module.scss
@@ -69,6 +69,8 @@
         position: absolute;
         left: 50px;
         top: 200px;
+        height: 210px;
+        overflow: auto;
         padding-right: 50px;
         font-family: Montserrat;
         z-index: 1;
@@ -155,9 +157,11 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    color: white;
 
     p {
         all: unset;
+        color: white;
     }
 }
 
@@ -167,9 +171,11 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    margin-top: 70px;
 
     p {
         all: unset;
+        color: white;
     }
 }
 
