--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -122,8 +122,10 @@
 }
 
 .f_featureHeaderWrapperTitle {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.7);
     color: $white;
+    display: inline-block;
+    font-size: 6px;
 }
 
 .f_defaultFeatureAvatar {
