worked with album view page and some few player functionalities

--- a/src/components/common/FeatureAlbum/index.module.scss
+++ b/src/components/common/FeatureAlbum/index.module.scss
@@ -1,2 +1,11 @@
 @import '$assets/scss/main.scss';
 
+.wrapper {
+    position: relative;
+    margin-right: 10px;
+
+    img {
+        object-fit: cover;
+        object-position: center;
+    }
+}
