--- a/src/containers/Media/NewAlbum/index.module.scss
+++ b/src/containers/Media/NewAlbum/index.module.scss
@@ -5,3 +5,14 @@
   height: 100%;
   padding-top: 5rem;
 }
+
+.card {
+  background-color: rgba($color: #000000, $alpha: 0.75) !important;
+}
+
+.artist {
+  position: relative;
+  height: 200px;
+  width: 200px;
+  display: inline-block;
+}
