optimized media, i think now the audio buffers

--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -234,6 +234,11 @@
 .title {
     font-size: 12px;
     margin-left: 2px;
+    cursor: pointer;
+
+    &::hover {
+        color: red;
+    }
 }
 
 .rowBg {
