--- a/src/containers/Media/Music/widgets/playlist/index.module.scss
+++ b/src/containers/Media/Music/widgets/playlist/index.module.scss
@@ -10,6 +10,29 @@
 }
 
 .body {
+    position: relative;
+    display: block;
     overflow-x: hidden;
     // border: solid 1px red;
+}
+
+.wrapper {
+    position: relative;
+    display: block;
+}
+
+.left {
+    position: absolute;
+    left: -45px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
+.right {
+    position: absolute;
+    right: -45px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
 }
