almost finalizing Heri's final comment

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -34,6 +34,8 @@ $pink: #EA4C89;
 $primary-light-gray: #F7F5F5;
 $secondary-light-gray: #F1F1F1;
 
+$background-color: #323232;
+
 // Z-INDEX
 $z-index-lift: 9;
 $z-index-next: 99;
