the bellow comments are done: -> login button on forgot password redirects to old screens -> Making back button on forgot password be full button -> On Movie and Series Description Screen adding a back button -> On theatre background clicked playing the trailer -> Checking if email validation is available on registration -> Back button on view content Play movie and Episode the audio player still continues to play -> making the description view wide -> back button in fullscreen player does not work -> Loading does not end in  Theatre

--- a/src/containers/Media/Theatre/widgets/series/index.module.scss
+++ b/src/containers/Media/Theatre/widgets/series/index.module.scss
@@ -1,13 +1,23 @@
 @import '$assets/scss/main.scss';
 
 .wrapper {
+    position: relative;
     width: 150px;
     cursor: pointer;
     
-    img {
+    .cover {
         width: 150px;
         aspect-ratio: 27/40;
         object-fit: cover;
         object-position: center;
+    }
+
+    .btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 45px;
+        width: 45px;
     }
 }
