--- a/src/containers/Media/Description/index.module.scss
+++ b/src/containers/Media/Description/index.module.scss
@@ -1,7 +1,7 @@
 @import '$assets/scss/main.scss';
 
 .wrapper {
-    width: 960px;
+    width: 100%;
     margin: 0 auto;
 
     @media screen and (max-width: 768px) {
@@ -12,7 +12,7 @@
         position: relative;
         display: block;
         background-color: $background-color;
-        width: 960px;
+        width: 100%;
         margin: 0 auto;
         overflow: hidden;
         height: 540px;
@@ -100,7 +100,7 @@
     }
 
     .moreDetails {
-        margin-top: 20px;
+        margin: 20px;
         color: white;
 
         @media screen and (max-width: 768px) {
@@ -117,12 +117,11 @@
     }
 
     .similar {
+        
         color: white;
 
-        @media screen and (max-width: 768px) {
-            h2, p {
-                margin: 0 20px;
-            }
+        h2, p {
+            margin: 0 20px;
         }
 
         .media {
