--- a/src/containers/Media/ViewMedia/index.module.scss
+++ b/src/containers/Media/ViewMedia/index.module.scss
@@ -3,8 +3,8 @@
 .container {
   position: relative;
   min-height: 100%;
-  margin-top: 4rem !important;
-  padding: 4rem 2rem 10rem 2rem;
+  margin-top: 0 !important;
+  padding: 2rem 2rem 10rem 2rem;
 }
 
 .commentsWrapper {
