--- a/src/containers/Media/Watch/index.module.scss
+++ b/src/containers/Media/Watch/index.module.scss
@@ -1,3 +1,5 @@
+@import '$assets/scss/main.scss';
+
 .loader {
     height: 100vh;
     width: 100vw;
@@ -24,5 +26,135 @@
     display: inline-block;
     top: 20px;
     left: 20px;
-    z-index: 10;
+    z-index: 999;
+    color: white;
+}
+
+.controls {
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    padding: 0  20px;
+    color: white;
+
+    .range {
+        display: flex;
+        align-items: center;
+
+        .sliderWrapper {
+            position: relative;
+            flex: 1;
+            height: 18px;
+
+            .bottom {
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translate(0, -50%);
+                width: 100%;
+                z-index: 1;
+
+                height: 3px;
+                background-color: rgba($color: #fff, $alpha: 0.45);
+            }
+
+            .buffered {
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translate(0, -50%);
+
+                // width: 60%;
+                z-index: 2;
+                
+                height: 3px;
+                background-color: rgba($color: #fff, $alpha: 0.6);
+            }
+
+            .progress {
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translate(0, -50%);
+
+                // width: 45%;
+                z-index: 3;
+
+                height: 3px;
+                background-color: $primary-color;
+            }
+
+            .slider {
+                appearance: none;
+
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translate(0, -50%);
+                width: 100%;
+                z-index: 4;
+
+                background-color: transparent;
+                
+                height: 3px;
+                outline: none;
+                // opacity: 0.7;
+                transition: all 0.2s ease-in;
+    
+                &::-webkit-slider-thumb {
+                    appearance: none;
+                    
+                    width: 18px;
+                    height: 18px;
+                    background-color: $primary-color;
+    
+                    cursor: pointer;
+                    border-radius: 25px;
+                }
+            }
+        }
+
+        span {
+            padding-left: 10px;
+            color: white;
+        }
+    }
+
+    .actions {
+        display: flex;
+        padding: 15px 0;
+        align-items: center;
+
+        .main {
+            flex: 1;
+        }
+
+        .quality {
+            position: relative;
+
+            .menu {
+                position: absolute;
+
+                display: flex;
+                flex-direction: column;
+
+                bottom: 75px;
+                right: 0;
+
+                background-color: rgba($color: #1F2023, $alpha: 0.6);
+
+                div {
+                    padding: 15px 20px;
+                    width: 180px;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: rgba($color: #fff, $alpha: 0.3);
+                    }
+                }
+            }
+        }
+    }
 }
